# function_profiler

./: .clang-format  CMakeLists.txt  README.md  function_profiler.h  function_profiler.hpp  times.md
examples/: basic.cpp  snippets.cpp  snippets.h
